updating with Active Record,  Postgres support and config options to make it easy to deploy on heroku

--- a/views/index.haml
+++ b/views/index.haml
@@ -29,12 +29,12 @@
       %button.btn.btn-block(type="submit") Insert the above message
 
     %form(method="post" action="/insert-item")
-      %input(type="hidden" name="message" value="Chipotle says hi!")
-      %input(type="hidden" name="imageUrl" value="images/chipotle-tube-640x360.jpg")
+      %input(type="hidden" name="message" value="Purr Programming Makes Me Tired!")
+      %input(type="hidden" name="imageUrl" value="images/allie1.JPG")
       %input(type="hidden" name="contentType" value="image/jpeg")
       %button.btn.btn-block(type="submit")
         Insert a picture
-        %img.button-icon(src="/images/chipotle-tube-640x360.jpg")
+        %img.button-icon(src="/images/allie1.JPG")
 
     %form(method="post" action="/insert-item-with-action")
       %button.btn.btn-block(type="submit")
